moved ebola from homemade;height of header on healthcare & enterprise pages; consistent header sizes throughout;  fixed studio nav overlapping mobile nav

--- a/source/stylesheets/_header.css.scss
+++ b/source/stylesheets/_header.css.scss
@@ -73,6 +73,7 @@ body.products #main-header #nav-buttons .products{
 		padding-top: 0;
 		top: 55px;
 		left: 0;
+		z-index: 10;
 		.nav-button {
 			display: block;
 			padding-top: 10px;
