--- a/source/stylesheets/_layout.css.scss
+++ b/source/stylesheets/_layout.css.scss
@@ -34,16 +34,21 @@ body {
 }
 
 .hero {
-	min-height: 240px;
-	padding: 24% 1em 1%;
 	position: relative;
 	z-index: 1;
+	min-height: 857px;
+	
+	@media only screen and (max-width: 700px) {
+		min-height: 600px;	
+	}
 
 	.title {
-		position: relative;
-		top: 10%;
+		position: absolute;
+//		top: 10%;
+		bottom: 5px;
 		width: 100%;
 		padding-bottom: 25px;
+		
 	}
 
 	h2, h3 {
