--- a/source/stylesheets/sections/team.css.scss
+++ b/source/stylesheets/sections/team.css.scss
@@ -17,10 +17,8 @@ div.team {
 .hero {
 	background-image: linear-gradient(to bottom, fade-out(#000, 0.65) 0%, fade-out(#000, 0.5) 100%), url('../../images/team/team.jpg');
 	background-position: 0 15%;
-	padding: 33.33% 1em 1%;
-    @media only screen and (max-width: 610px) {
-        padding: 60% 1em 1%;
-    }
+	
+	
 }
 
 #content-area {
